--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "tesonero-landing",
   "private": false,
   "version": "0.0.0",
+  "homepage": "https://duckpluck.github.io/Tesonero-landing",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
