--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "@react-spring/parallax": "^9.7.1",
+    "gh-pages": "^5.0.0",
     "node-sass": "^8.0.0",
     "node-scss": "^7.0.3",
     "react": "^18.2.0",
