--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "node-sass": "^8.0.0",
     "node-scss": "^7.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-slick": "^0.23.10",
     "@vitejs/plugin-react": "^3.1.0",
     "sass": "^1.60.0",
     "typescript": "^4.9.3",
